--- a/app/src/main/res/layout/animal_item.xml
+++ b/app/src/main/res/layout/animal_item.xml
@@ -1,40 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="88dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="88dp">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivAnimal"
         android:layout_width="100dp"
         android:layout_height="56dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" 
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tvUzbName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/ivAnimal"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="@dimen/margin_standard"
         android:text="Name Uzb"
-        android:layout_marginTop="@dimen/margin_standard"/>
+        app:layout_constraintStart_toEndOf="@id/ivAnimal"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tvRusName"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        app:layout_constraintStart_toEndOf="@id/ivAnimal"
-        app:layout_constraintTop_toBottomOf="@id/tvUzbName"
         android:layout_marginStart="20dp"
-        android:text="Name Rus" />
+        android:text="Name Rus"
+        app:layout_constraintStart_toEndOf="@id/ivAnimal"
+        app:layout_constraintTop_toBottomOf="@id/tvUzbName" />
+
     <TextView
         android:id="@+id/tvEngName"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        app:layout_constraintStart_toEndOf="@id/ivAnimal"
-        app:layout_constraintTop_toBottomOf="@id/tvRusName"
         android:layout_marginStart="20dp"
-        android:text="Name Eng" />
-    
+        android:text="Name Eng"
+        app:layout_constraintStart_toEndOf="@id/ivAnimal"
+        app:layout_constraintTop_toBottomOf="@id/tvRusName" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
