add favorite animal

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,5 +19,8 @@
         <item
             android:id="@+id/nav_animals"
             android:title="@string/menu_animals" />
+        <item
+            android:id="@+id/nav_favorite"
+            android:title="Favorite"/>
     </group>
 </menu>
